@@ -79,7 +79,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Mon Oct 30 2017 - dgilbert at interlog dot com
+* Fri Nov 03 2017 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.43
 
